[package]
name = "transforming-sync-to-async"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["tokio1", "attributes"] }
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
yahoo_finance_api = "2.1.0"
